@@ -18,7 +18,6 @@
 package org.drftpd.mirroring;
 
 import net.sf.drftpd.NoAvailableSlaveException;
-import net.sf.drftpd.event.listeners.Archive;
 import net.sf.drftpd.mirroring.Job;
 import net.sf.drftpd.mirroring.JobManager;
 import net.sf.drftpd.remotefile.LinkedRemoteFileInterface;
@@ -29,6 +28,7 @@ import org.drftpd.PropertyHelper;
 import org.drftpd.master.RemoteSlave;
 import org.drftpd.mirroring.archivetypes.IncompleteDirectoryException;
 import org.drftpd.mirroring.archivetypes.OfflineSlaveException;
+import org.drftpd.plugins.Archive;
 
 import org.drftpd.sections.SectionInterface;
 
