@@ -18,7 +18,6 @@ package org.drftpd.mirroring.archivetypes;
 
 import net.sf.drftpd.NoAvailableSlaveException;
 import net.sf.drftpd.ObjectNotFoundException;
-import net.sf.drftpd.event.listeners.Archive;
 import net.sf.drftpd.mirroring.Job;
 import net.sf.drftpd.mirroring.JobManager;
 import net.sf.drftpd.remotefile.LinkedRemoteFileInterface;
@@ -28,6 +27,7 @@ import org.apache.log4j.Logger;
 import org.drftpd.PropertyHelper;
 import org.drftpd.master.RemoteSlave;
 import org.drftpd.mirroring.ArchiveType;
+import org.drftpd.plugins.Archive;
 
 import org.drftpd.sections.SectionInterface;
 
